--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <title>launch application using terraform</title>
 <h1>
 <body bgcolor=black>
-<h1 style="color:pink" align=center> HOWDY GUYS </h1>
-<h2 style="color:blue" align=center>This is my interesting task</h2>
+<h1 align=center> welcome to my Future world  </h1>
+<h2 align=center>This is my interesting task</h2>
+  <img src="ab.jbg" width=500 height=500>
 </body>
 </HEAD>
 </HTML>
