--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>
 <body bgcolor=black>
 <h1 align=center> welcome to my Future world  </h1>
-<h2 align=center>This is my interesting task</h2>
+<h2 align=center> task 2 </h2>
   <img src="ab.jbg" width=500 height=500>
 </body>
 </HEAD>
